--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Заголовок</h1>
+    <section id="about">
+        <h1>Раздел "О нас"</h1>
+        <p><span>Lorem ipsum dolor sit amet.</span></p>
+    </section>
 </body>
 </html>
