--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=h1h, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Заголовок</h1>
+    <section>
+        <h1>Контакты</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas tempora quidem recusandae corrupti molestias magni.</p>
+    </section>
 </body>
 </html>
